--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <!--Las keywords no sirven para nada-->
     <meta name="description" content="">
-
+    <link rel="favicon" href="favicon.jpg" type="image/jpg">   
 </head>
 <body>
     <h1>Las zapatillas mas exclusivas y caras del mercado.</h1>
