--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SneakerExclusive</title>
+    <link rel="stylesheet" href="ProyectoPOW.css">
     <meta name="keywords" content="">
     <!--Las keywords no sirven para nada-->
     <meta name="description" content="">
-    <link rel="favicon" href="favicon.jpg" type="image/jpg">   
+    <link rel="icon" href="favicon.jpg" type="image/jpg">   
 </head>
 <body>
     <h1>Las zapatillas mas exclusivas y caras del mercado.</h1>
     <p>Work in progress...</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel odio ipsum magni ut vitae, enim culpa debitis optio pariatur? Nam eum nobis illo et sit. Odit molestias neque exercitationem sequi.</p>
-    
+    <img src="redocober.webp" alt="Yeezy Red October">
+            <h3>Yeezy Red October</h3>
+            <p>Precio en vivo: <a href="https://stockx.com/nike-air-yeezy-2-red-october" target="_blank">Ver en StockX</a></p>
+
 </body>
 </html>
