--- a/index.html
+++ b/index.html
@@ -63,35 +63,35 @@
         
         <div class="grid-container">
             <div class="sneaker">
-                <img src="redoctober.webp" alt="Yeezy Red October">
+                <img src="Imagenes/redoctober.jpg" alt="Yeezy Red October">
                 <h3>Yeezy Red October</h3>
                 <p>Una obra maestra diseñada por Kanye West en colaboración con Nike. Estas zapatillas son conocidas por su color rojo vibrante y su exclusividad, con muy pocas unidades lanzadas al mercado.</p>
                 <p><strong>Precio promedio:</strong> $10,000</p>
                 <a href="https://stockx.com/nike-air-yeezy-2-red-october" target="_blank" class="btn">Ver en StockX</a>
             </div>
             <div class="sneaker">
-                <img src="jordan1.webp" alt="Air Jordan 1 Chicago">
+                <img src="Imagenes/jordan1.webp" alt="Air Jordan 1 Chicago">
                 <h3>Air Jordan 1 Chicago</h3>
                 <p>El modelo que marcó el inicio de la era de Michael Jordan en las sneakers. Su combinación de colores y legado la convierten en un ícono mundial.</p>
                 <p><strong>Precio promedio:</strong> $5,000</p>
                 <a href="https://stockx.com/air-jordan-1-retro-chicago-2015" target="_blank" class="btn">Ver en StockX</a>
             </div>
             <div class="sneaker">
-                <img src="bapesta.webp" alt="Bape STA">
+                <img src="Imagenes/bapesta.webp" alt="Bape STA">
                 <h3>Bape STA</h3>
                 <p>Las Bape STA revolucionaron la moda callejera con su diseño inspirado en las Air Force 1, pero con un toque japonés único y colores llamativos.</p>
                 <p><strong>Precio promedio:</strong> $3,500</p>
                 <a href="https://stockx.com/bape-sta" target="_blank" class="btn">Ver en StockX</a>
             </div>
             <div class="sneaker">
-                <img src="AirMag.jpg" alt="Nike MAG">
+                <img src="Imagenes/AirMag.jpg" alt="Nike MAG">
                 <h3>Nike MAG</h3>
                 <p>Inspiradas en *Back to the Future II*, estas zapatillas cuentan con tecnología de autoajuste y luces LED. Solo 89 pares fueron lanzados en subastas benéficas.</p>
                 <p><strong>Precio promedio:</strong> $25,000</p>
                 <a href="https://stockx.com/nike-mag-back-to-the-future-2016" target="_blank" class="btn">Ver en StockX</a>
             </div>
             <div class="sneaker">
-                <img src="travis.webp" alt="Travis Scott x Air Jordan 1">
+                <img src="Imagenes/travis.webp" alt="Travis Scott x Air Jordan 1">
                 <h3>Travis Scott x Air Jordan 1</h3>
                 <p>Con su swoosh invertido y su estilo único, estas zapatillas creadas en colaboración con el rapero Travis Scott son un éxito entre los fans.</p>
                 <p><strong>Precio promedio:</strong> $1,800</p>
