--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         
         <div class="grid-container">
             <div class="sneaker">
-                <img src="Imagenes/redoctober.jpg" alt="Yeezy Red October">
+                <img src="Imagenes/redoctober.webp" alt="Yeezy Red October">
                 <h3>Yeezy Red October</h3>
                 <p>Una obra maestra diseñada por Kanye West en colaboración con Nike. Estas zapatillas son conocidas por su color rojo vibrante y su exclusividad, con muy pocas unidades lanzadas al mercado.</p>
                 <p><strong>Precio promedio:</strong> $10,000</p>
