--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:title" content="SneakerExclusive - Zapatillas Exclusivas y Caras">
     <meta name="twitter:description" content="Las zapatillas más exclusivas del mercado: Yeezy, Air Jordan, Bape y más.">
     <meta name="twitter:image" content="https://example.com/preview.jpg">
-
+    <link rel="canonical" href="https://OscarLopez1701.github.io">
    
     <link rel="icon" href="favicon.jpg" type="image/jpg">
 
@@ -32,6 +32,20 @@
    
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Product",
+          "name": "Yeezy Red October",
+          "image": "https://oscarlopez1701.github.io/Imagenes/redoctober.webp",
+          "description": "Una obra maestra diseñada por Kanye West en colaboración con Nike. Estas zapatillas son conocidas por su color rojo vibrante y su exclusividad, con muy pocas unidades lanzadas al mercado.",
+          "url": "https://stockx.com/nike-air-yeezy-2-red-october",
+          "offers": {
+            "@type": "Offer",
+            "price": "10,000"
+          }
+        }
+        </script>
 </head>
 <body>
     <header>
