--- a/index.html
+++ b/index.html
@@ -46,7 +46,35 @@
           }
         }
         </script>
-</head>
+
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Inicio",
+          "item": "https://OscarLopez1701.github.io/index.html"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Nike",
+          "item": "https://OscarLopez1701.github.io/nike.html"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Modelos Exclusivos",
+          "item": "https://OscarLopez1701.github.io/nike-exclusivos.html"
+        }
+      ]
+    }
+    </script>
+    </head>
+    
 <body>
     <header>
         <h1>SneakerExclusive</h1>
@@ -60,6 +88,7 @@
             <li><a href="#historia">Historia de las Sneakers</a></li>
             <li><a href="#nosotros">¿Quiénes somos?</a></li>
             <li><a href="#contacto">Contacto</a></li>
+            <li><a href="webs-interes.html">Webs de interés</a></li>
         </ul>
     </nav>
 
@@ -156,5 +185,11 @@
     <footer>
         <p>&copy; 2024 SneakerExclusive. Todos los derechos reservados.</p>
     </footer>
-</body>
+
+    <nav id="breadcrumb">
+      <a href="index.html">Inicio</a> > <a href="nike.html">Nike</a> > <a href="nike-exclusivos.html">Modelos Exclusivos</a>
+    </nav>
+
+    </body>
+    
 </html>
