--- a/index.html
+++ b/index.html
@@ -140,6 +140,27 @@
                 <p><strong>Precio promedio:</strong> $1,800</p>
                 <a href="https://stockx.com/air-jordan-1-retro-high-og-travis-scott" target="_blank" class="btn">Ver en StockX</a>
             </div>
+            <div class="sneaker">
+                <img src="Imagenes/j1fearless.webp" alt="Jordan 1 Fearless">
+                <h3>Air Jordan 1 Fearless</h3>
+                <p>Nike quiso plasmar los colores azul y rojo mediante superposiciones en charol, consiguiendo con esa combinación junto al blanco de la puntera y al negro del Swoosh el toque distintivo que necesitan unas sneakers tan especiales como estas.</p>
+                <p><strong>Precio promedio:</strong> $450</p>
+                <a href="https://stockx.com/es-es/air-jordan-1-retro-high-fearless-unc-chicago" target="_blank" class="btn">Ver en StockX</a>
+            </div>
+            <div class="sneaker">
+                <img src="Imagenes/yeezy350v2.webp" alt="Adidas Yeezy 350 v2 Core">
+                <h3>Adidas Yeezy 350 v2 Core</h3>
+                <p>La zapatilla que ha definido un década, la Yeezy Boost 350 es, sin duda, el diseño más triunfador de Kanye West para Adidas. ¿Y por qué? Porque nos sólo son ‘fresh’ tanto para una sesión en el gimnasio como para salir por la noche, también son increíblemente cómodas.</p>
+                <p><strong>Precio promedio:</strong> $250-300</p>
+                <a href="https://stockx.com/es-es/adidas-yeezy-boost-350-v2-core-black-red" target="_blank" class="btn">Ver en StockX</a>
+            </div>
+            <div class="sneaker">
+                <img src="Imagenes/jordan5OffWhite.webp" alt="Jordan 5 Off-White Muslim">
+                <h3>Jordan 5 Off-White Muslim</h3>
+                <p>Las Air Jordan 5 Retro Off-White Muslim fueron lanzadas en 2020, diseñadas por Virgil Abloh. Inspiradas en las Jordan 5 Black Metallic, presentan una parte superior de malla negra con paneles translúcidos, ventanas circulares y detalles en rojo. La lengüeta reflectante y el diseño deconstruido le dan un estilo único. Se han convertido en una de las colaboraciones más codiciadas de Jordan Brand</p>
+                <p><strong>Precio promedio:</strong>$700-1000</p>
+                <a href="https://stockx.com/es-es/air-jordan-5-retro-off-white-black" target="_blank" class="btn">Ver en StockX</a>
+            </div>
         </div>
     </section>
 
