--- a/index.html
+++ b/index.html
@@ -196,11 +196,12 @@
     <section id="contacto">
         <h2>Contacto</h2>
         <p>¿Tienes preguntas o sugerencias? Escríbenos a <a href="mailto:info@sneakerexclusive.com">info@sneakerexclusive.com</a>.</p>
-        <div class="social-icons">
+        <!--<div class="social-icons">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
+    -->
     </section>
 
     <footer>
